--- a/BloodDonation/BloodDonation/View/Base.lproj/Main.storyboard
+++ b/BloodDonation/BloodDonation/View/Base.lproj/Main.storyboard
@@ -90,12 +90,19 @@
                                         </fragment>
                                     </attributedString>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="handelingLoginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PLF-lb-yAQ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="6mM-bK-0sk"/>
+                    <connections>
+                        <outlet property="emailTextFieldLogin" destination="PvV-5j-1DZ" id="jGP-0m-ynR"/>
+                        <outlet property="passwordTextFieldLogin" destination="TnL-Ox-qt6" id="5xr-GN-p8p"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -283,13 +290,54 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DonationCell" id="LbA-eM-BeM">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DonationCell" rowHeight="184" id="LbA-eM-BeM" customClass="PostCell" customModule="BloodDonation" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="184"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LbA-eM-BeM" id="VU7-gP-bbH">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qxq-Ru-OeG">
+                                                    <rect key="frame" x="20" y="11" width="98" height="84"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cys-te-DL4">
+                                                    <rect key="frame" x="144" y="7" width="92" height="36"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQT-ow-kUt">
+                                                    <rect key="frame" x="144" y="59" width="81" height="36"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uMf-v1-XRz">
+                                                    <rect key="frame" x="150" y="117" width="81" height="36"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="UserName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pbc-gg-7eA">
+                                                    <rect key="frame" x="29" y="101" width="81" height="36"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="datePost" destination="Cys-te-DL4" id="m7l-gY-REE"/>
+                                            <outlet property="locationPost" destination="uMf-v1-XRz" id="LgP-sK-Xv3"/>
+                                            <outlet property="notePost" destination="uMf-v1-XRz" id="tF7-oH-OFx"/>
+                                            <outlet property="userNamePost" destination="Pbc-gg-7eA" id="Pim-OK-JQW"/>
+                                            <outlet property="userPostImage" destination="Qxq-Ru-OeG" id="TbZ-jG-jmy"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -304,6 +352,17 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="2ho-5l-e3L">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="Feg-PK-RN1">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="Oe5-iC-kNC">
+                                <rect key="frame" x="20" y="5" width="92" height="34.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="LogOut"/>
+                            </button>
+                            <connections>
+                                <action selector="handlingLogoutButoon:" destination="6LW-uT-AvD" id="Sr7-Pn-nNc"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="c53-py-6xJ">
                             <connections>
                                 <segue destination="PDW-3n-ocq" kind="show" id="wSn-bs-Jom"/>
@@ -311,6 +370,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="postTabelViewHome" destination="gOj-MH-Oa4" id="Bzq-fs-LTZ"/>
                         <segue destination="PDW-3n-ocq" kind="show" identifier="toDonationAdd" id="oti-3j-noZ"/>
                         <segue destination="ORo-JS-8GO" kind="show" identifier="toDateilsDonation" id="hfe-PC-zYE"/>
                     </connections>
@@ -374,6 +434,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="MqV-RY-Iox"/>
+                    <connections>
+                        <outlet property="dateLabelDetails" destination="CrG-x4-oYY" id="JMV-f6-4RY"/>
+                        <outlet property="locationLabelDetails" destination="YqJ-Yh-lak" id="UIv-mk-TnU"/>
+                        <outlet property="notLabelDetails" destination="H1T-HJ-Cwj" id="4dj-dK-3xw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6mc-yz-vJf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -463,6 +528,9 @@
                                         </fragment>
                                     </attributedString>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="handlingAddQ:" destination="PDW-3n-ocq" eventType="touchUpInside" id="kI3-9B-4bh"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Do ytou have any ..?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFS-vB-LCW">
                                 <rect key="frame" x="20" y="498" width="241" height="48"/>
@@ -478,11 +546,42 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p6G-eg-yPM">
+                                <rect key="frame" x="331" y="395" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="elR-A2-jPu">
+                                <rect key="frame" x="331" y="451" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4G5-ls-qej">
+                                <rect key="frame" x="331" y="507" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iHr-Oj-wzO">
+                                <rect key="frame" x="331" y="563" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </switch>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZDE-5N-1x2">
+                                <rect key="frame" x="189" y="116" width="161" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="I5U-SQ-AvH"/>
                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <navigationItem key="navigationItem" id="DCs-gR-fZG"/>
+                    <connections>
+                        <outlet property="actionButtonAdd" destination="4XW-SA-cW2" id="Ebh-Tt-f4E"/>
+                        <outlet property="dateTextFieldPost" destination="QM1-f2-ABE" id="fAu-NI-iZe"/>
+                        <outlet property="locationTextFieldPost" destination="y2C-Nm-Omk" id="gXy-zP-2LG"/>
+                        <outlet property="noteTextFieldPost" destination="CwP-ew-hyw" id="mu9-4l-uco"/>
+                        <outlet property="postImageView" destination="ZDE-5N-1x2" id="V6D-dg-DXE"/>
+                        <outlet property="switchQuetion1" destination="p6G-eg-yPM" id="LU8-m3-Oov"/>
+                        <outlet property="switchQuetion2" destination="elR-A2-jPu" id="IWc-1e-1rd"/>
+                        <outlet property="switchQuetion3" destination="4G5-ls-qej" id="AtQ-ME-uXi"/>
+                        <outlet property="switchQuetion4" destination="iHr-Oj-wzO" id="MGT-Ml-NcT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xWo-Sg-Itw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
